--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
 body{
 margin:0;
 font-family:'Poppins',sans-serif;
-background:
+background-image:
 linear-gradient(135deg,#0d47a1,#1976d2),
-url('pattern.png');
-background-size:cover;
-background-attachment:fixed;
-color:#333;
+url('https://www.transparenttextures.com/patterns/diamond-upholstery.png');
 }
 
 .container{
@@ -126,6 +123,9 @@ to{opacity:1;transform:translateY(0);}
 
 <div class="container">
 <div class="card">
+  <div style="text-align:center;margin-bottom:20px;">
+   <img src="assets/LOGO HPG XÓA PHÔNG.png" style="width:120px;">
+</div>
 <h1>Trắc nghiệm định hướng nghề nghiệp RIASEC</h1>
 
 <div class="guide">
@@ -289,5 +289,6 @@ result:topGroups.join(" & ")
 
 </body>
 </html>
+
 
 
