--- a/index.html
+++ b/index.html
@@ -126,7 +126,10 @@ to{opacity:1;transform:translateY(0);}
   <div style="text-align:center;margin-bottom:20px;">
    <img src="assets/LOGO HPG XÓA PHÔNG.png" style="width:120px;">
 </div>
-<h1>Trắc nghiệm định hướng nghề nghiệp RIASEC</h1>
+<h1>
+  Trắc nghiệm định hướng nghề nghiệp RIASEC<br>
+  <span class="sub-title">Hệ thống giáo dục HPG</span>
+</h1>
 
 <div class="guide">
 <h3>Hướng dẫn</h3>
@@ -289,6 +292,7 @@ result:topGroups.join(" & ")
 
 </body>
 </html>
+
 
 
 
