--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@ C:"https://images.unsplash.com/photo-1554224155-6726b3ff858f"
 };
 
 const descriptions = {
-R:"Nhóm Thực tế (R). Phù hợp: Cơ khí, Xây dựng, Kỹ thuật.",
-I:"Nhóm Nghiên cứu (I). Phù hợp: Khoa học, Y học, Phân tích dữ liệu.",
-A:"Nhóm Nghệ thuật (A). Phù hợp: Thiết kế, Kiến trúc, Sáng tạo.",
-S:"Nhóm Xã hội (S). Phù hợp: Giáo dục, Điều dưỡng, Tư vấn.",
-E:"Nhóm Quản lý (E). Phù hợp: Kinh doanh, Luật, Marketing.",
-C:"Nhóm Nghiệp vụ (C). Phù hợp: Kế toán, Ngân hàng, Hành chính."
+R:"Nhóm Thực tế (R). Những người này thường giỏi các công việc cơ khí hoặc vận động. Ngành học gợi ý: Nông nghiệp, Máy tính, Xây dựng, Cơ khí/Thợ máy, Kỹ thuật.",
+I:"Nhóm Nghiên cứu (I). Những người này thích quan sát, học hỏi, phân tích và giải quyết vấn đề.Ngành học gợi ý: Sinh học biển, Hóa học, Y học/Phẫu thuật, Tâm lý học.",
+A:"Nhóm Nghệ thuật (A). Những người này thích làm việc trong các tình huống phi cấu trúc, nơi họ có thể sử dụng sự sáng tạo của mình.Ngành học gợi ý: Truyền thông, Nghệ thuật Mỹ thuật và Biểu diễn, Nhiếp ảnh, Thiết kế nội thất, Kiến trúc.",
+S:"Nhóm Xã hội (S). Những người này thích làm việc với con người hơn là với đồ vật.Ngành học gợi ý: Tư vấn, Điều dưỡng, Vật lý trị liệu, Giáo dục.",
+E:"Nhóm Quản lý (E). Những người này thích làm việc với người khác và thích thuyết phục hoặc biểu diễn.Ngành học gợi ý: Bất động sản, Marketing/Bán hàng, Luật, Tài chính/Ngân hàng.",
+C:"Nhóm Nghiệp vụ (C). Những người này rất chú trọng chi tiết, có tổ chức và thích làm việc với dữ liệu.Ngành học gợi ý: Kế toán, Bảo hiểm, Quản trị, Xử lý dữ liệu."
 };
 
 const container=document.getElementById("questions");
@@ -292,6 +292,7 @@ result:topGroups.join(" & ")
 
 </body>
 </html>
+
 
 
 
