--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ to{opacity:1;transform:translateY(0);}
 <h3>Hướng dẫn</h3>
 <p>
 Hãy đọc từng câu dưới đây. Nếu bạn đồng ý với câu đó, hãy đánh dấu chọn.
-Không có câu trả lời nào là sai. Hãy trả lời trung thực theo sở thích của bạn.
+Không có câu trả lời nào là sai. Hãy trả lời trung thực theo sở thích của bạn. Sau đó, bạn hãy nhấn "Xem kết quả" để biết được mình sẽ phù hợp với ngành nghề nào.
 </p>
 </div>
 
@@ -292,6 +292,7 @@ result:topGroups.join(" & ")
 
 </body>
 </html>
+
 
 
 
